2006-11-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/mac.h: Added len to struct mac_ctx.
	* src/munged/mac.c (mac_final): Added check for valid dstlen.
	* src/munged/mac.c (_mac_init): Set struct mac_ctx len var.
	* src/munged/mac.c (_mac_final): Added dstlen check to ensure mac will
	  not overflow dst buffer.
	* src/munged/mac.c (HAVE_LIBGCRYPT:_mac_block): Memset ctx when done.
	* src/munged/mac.c (HAVE_OPENSSL:_mac_block): Added dstlen check to
	  ensure mac will not overflow dst buffer.

2006-11-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/md.h: Added len to struct md_ctx.
	* src/munged/md.c (md_final): Added check for valid dstlen.
	* src/munged/md.c (md_copy): Copied struct md_ctx len var.
	* src/munged/md.c (_md_init): Set struct md_ctx len var.
	* src/munged/md.c (_md_final): Added dstlen check to ensure md will not
	  overflow dst buffer.

	* src/munged/md.c (md_cleanup): Removed unnecessary var initialization.

	* src/munged/crypto.c (crypto_init): Tweaked err msg verbage.

2006-11-07  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/enc.c (enc_mac): Reverted assertion after mac_final().

2006-11-02  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/enc.c (enc_validate_msg): Added check to ensure the MAC
	  would generate a DEK of sufficient length for the cipher.
	* src/munged/dec.c (dec_unpack_outer): Added check to ensure the MAC
	  would generate a DEK of sufficient length for the cipher.
	* src/libmunge/munge_ctx.3.in: Updated documentation for
	  MUNGE_CIPHER_AES256 to note that it requires MUNGE_MAC_SHA256.

	* src/munged/conf.c (create_subkeys): Moved check for minimum length
	  of keyfile from _conf_open_keyfile() in order for it to be performed
	  on the number of bytes processed instead of the size of the file.

	* src/munged/random.c (HAVE_LIBGCRYPT:_random_read_seed):
	  Removed warning if seed does not exist.

	* src/munged/conf.c (_conf_open_keyfile): Added check for minimum
	  length of keyfile.